feat: Add new features and updates to the math quiz application, allows user to generate a new Math question/problem
- Update requirements to include  package.
- Change  type in URL path from int to str.
- Register , , and  models in the admin site.
- Create a loading indicator component for asynchronous operations.
- Update login redirect URL in settings.
- Add custom login redirect view to handle question redirection.
- Enhance home and question templates with loading indicators and error handling.
- Modify initial migration to use UUID for Question model ID.
- Add serialization method to Question model.

--- a/math_quizzty/templates/pages/home.html
+++ b/math_quizzty/templates/pages/home.html
@@ -13,7 +13,7 @@
                         {{ question.Question|markdownify }}
                 </p>
                     <div class="card-actions justify-end mt-4">
-                        <a href="{% url 'math_quiz:question' question.Id %}" class="btn btn-ghost gap-2" hx-boost="true">
+                        <a href="{% url 'math_quiz:question' question.Id %}" class="btn btn-ghost gap-2" hx-boost="true" hx-indicator=".htmx-indicator">
                             Solve
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                                 stroke="currentColor" class="w-5 h-5">
