--- a/math_quizzty/templates/pages/question.html
+++ b/math_quizzty/templates/pages/question.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load markdownify %}
 {% block content %}
+
+
 <div class="gap-4 max-w-[450px] mx-auto">
     <h1
         class="text-center font-bold text-xl sm:text-2xl md:text-3xl lg:text-[2.5em] mt-2 sm:mt-3 md:mt-4 mb-2 sm:mb-3 md:mb-8">
@@ -12,7 +14,7 @@
     </div>
     <div class="w-full max-w-[450px] p-4" id="choices">
         <h2 class="mb-4 mt-4 font-bold">Choices:</h2>
-        <form hx-post="{% url 'math_quiz:question' question.Id %}" hx-target="#choices" hx-swap="outerHTML">
+        <form hx-post="{% url 'math_quiz:question' question.Id %}" hx-target="#choices" hx-swap="outerHTML" hx-indicator=".htmx-indicator" hx-disabled-elt="find #check-cta" >
             <div class="grid grid-cols-2 gap-x-6 gap-y-2 px-2">
                 {% for option in question.Options %}
                 <div class="group">
@@ -35,8 +37,9 @@
                     <span>Generate</span>
                 </button>
                 {% endcomment %}
+                <!-- Loading indicator -->
                 <button id="check-cta" name="action" value="check"
-                    class="bg-[#FFF4B5] px-6 py-2 rounded-lg font-semibold hover:bg-[rgb(245,234,171)]">Check
+                    class="bg-[#FFF4B5] px-6 py-2 rounded-lg font-semibold hover:bg-[rgb(245,234,171)] disabled:bg-gray-200" >Check
                 </button>
             </div>
         </form>
