--- a/math_quizzty/templates/pages/question.html
+++ b/math_quizzty/templates/pages/question.html
@@ -14,7 +14,7 @@
     </div>
     <div class="w-full max-w-[450px] p-4" id="choices">
         <h2 class="mb-4 mt-4 font-bold">Choices:</h2>
-        <form hx-post="{% url 'math_quiz:question' question.Id %}" hx-target="#choices" hx-swap="outerHTML" hx-indicator=".htmx-indicator" hx-disabled-elt="find #check-cta" >
+        <form hx-post="{% url 'math_quiz:question' question.Id %}" hx-target="#choices" hx-swap="outerHTML" hx-indicator=".htmx-indicator" >
             <div class="grid grid-cols-2 gap-x-6 gap-y-2 px-2">
                 {% for option in question.Options %}
                 <div class="group">
