--- a/math_quizzty/templates/users/user_form.html
+++ b/math_quizzty/templates/users/user_form.html
@@ -3,29 +3,22 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-
-
   {{ user.username }}
-
-
 {% endblock title %}
+
 {% block content %}
-  <h1>
-  
-  
-    {{ user.username }}
-  
-  
-</h1>
-<form class="form-horizontal"
-      method="post"
-      action="{% url 'users:update' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  <div class="control-group">
-    <div class="controls">
-      <button type="submit" class="btn btn-primary">Update</button>
+<div class="container mx-auto px-4 py-6">
+  <div class="card bg-base-100 shadow-lg">
+    <div class="card-body">
+      <h1 class="text-2xl font-bold mb-4">{{ user.username }}</h1>
+      <form method="post" action="{% url 'users:update' %}">
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div class="mt-4">
+          <button type="submit" class="btn btn-primary">Update</button>
+        </div>
+      </form>
     </div>
   </div>
-</form>
+</div>
 {% endblock content %}
