--- a/math_quizzty/templates/pages/home.html
+++ b/math_quizzty/templates/pages/home.html
@@ -2,7 +2,7 @@
 {% load markdownify %}
 
 {% block content %}
-<div class="container mx-auto px-4">
+<div class="container mx-auto px-4 mt-10">
     <h1 class="text-center font-bold text-2xl mb-4">List Of Math Problems</h1>
     <div class="flex justify-center items-center">
         <div class="w-full md:w-2/3 lg:w-1/2">
