fix: unable to click confirm email in email_confirm.html due to loader component, soln: add loader component to various templates

--- a/math_quizzty/templates/pages/question.html
+++ b/math_quizzty/templates/pages/question.html
@@ -2,6 +2,9 @@
 {% load markdownify %}
 {% block content %}
 
+{% block extra_css %}
+  {% include "components/loader.html" %}
+{% endblock extra_css %}
 
 <div class="gap-4 max-w-[450px] mx-auto">
     <h1
