--- a/math_quizzty/templates/base.html
+++ b/math_quizzty/templates/base.html
@@ -50,7 +50,7 @@
 
   {% block body %}
   <div class="mb-1">
-    <nav class="navbar bg-[#C4FCFF]">
+    <nav class="navbar bg-base-300">
       <div class="flex-1">
         <a class="btn btn-ghost text-xl" href="{% url 'math_quiz:home' %}">Math Quizzty</a>
       </div>
